@@ -8,6 +8,7 @@ import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.screen.ingame.InventoryScreen;
 import net.minecraft.client.gui.widget.ButtonWidget;
 import net.minecraft.client.network.ClientPlayerEntity;
+import net.minecraft.client.resource.language.I18n;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 import org.joml.Vector3f;
@@ -42,25 +43,25 @@ public class AvatarGridScreen extends GridScreen {
         WidgetGroup previewGroup = new WidgetGroup();
         WidgetGroup blinkGroup = new WidgetGroup();
         markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.toggleoverlay"), b -> showOverlay = !showOverlay).dimensions(20, y, btnWidth, btnHeight).build());
-        markGroup.add(ButtonWidget.builder(Text.of("mcft.gui.button.freeselection"), b -> {
+        markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.freeselection"), b -> {
             freeDrag = !freeDrag;
             b.setMessage(Text.translatable(freeDrag ? "mcft.gui.button.alignedselection" : "mcft.gui.button.freeselection"));
         }).dimensions(20, y + btnHeight + 2, btnWidth, btnHeight).build());
-        markGroup.add(ButtonWidget.builder(Text.of("标记为左眼"), b -> eyeL = getSelection()).dimensions(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight).build());
-        markGroup.add(ButtonWidget.builder(Text.of("标记为右眼"), b -> eyeR = getSelection()).dimensions(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight).build());
-        if (!model.isFlat) markGroup.add(ButtonWidget.builder(Text.of("标记为嘴巴"), b -> mouth = getSelection()).dimensions(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight).build());
-        defaultGroup.add(ButtonWidget.builder(Text.of("预览效果"), b -> {
+        markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.markas.leye"), b -> eyeL = getSelection()).dimensions(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight).build());
+        markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.markas.reye"), b -> eyeR = getSelection()).dimensions(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight).build());
+        if (!model.isFlat) markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.markas.mouth"), b -> mouth = getSelection()).dimensions(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight).build());
+        defaultGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.preview"), b -> {
             markGroup.visible(preview);
             preview = !preview;
             if (preview) save();
             previewGroup.visible(preview);
         }).dimensions(20, y + (btnHeight + 2) * 5, btnWidth, btnHeight).build());
-        defaultGroup.add(ButtonWidget.builder(Text.of("上一步"), b -> MinecraftClient.getInstance().setScreen(new UVGridScreen())).dimensions(20, y + (btnHeight + 2) * 6, btnWidth, btnHeight).build());
-        markGroup.add(ButtonWidget.builder(Text.of("重置"), b -> {
+        defaultGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.previous"), b -> MinecraftClient.getInstance().setScreen(new UVGridScreen())).dimensions(20, y + (btnHeight + 2) * 6, btnWidth, btnHeight).build());
+        markGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.reset"), b -> {
             eyeL = eyeR = mouth = null;
             MinecraftClient.getInstance().setScreen(new AvatarGridScreen());
         }).dimensions(20, y + (btnHeight + 2) * 7, btnWidth, btnHeight).build());
-        previewGroup.add(ButtonWidget.builder(Text.of("重置"), b -> {
+        previewGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.reset"), b -> {
             eyeW.setValue(0.75f);
             eyeH.setValue(0.75f);
             eyeX.setValue(0.5f);
@@ -71,12 +72,12 @@ public class AvatarGridScreen extends GridScreen {
             eyeOffsetYR.setValue(0f);
             if (brow != null) brow.setValue(0f);
         }).dimensions(20, y + (btnHeight + 2) * 7, btnWidth, btnHeight).build());
-        defaultGroup.add(ButtonWidget.builder(Text.of("完成"), b -> {
+        defaultGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.done"), b -> {
             save();
             writeConfig();
             MinecraftClient.getInstance().setScreen(null);
         }).dimensions(20, y + (btnHeight + 2) * 8, btnWidth, btnHeight).build());
-        previewGroup.add(ButtonWidget.builder(Text.of("自动眨眼配置"), b -> {
+        previewGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.autoblink"), b -> {
             defaultGroup.visible(false);
             previewGroup.visible(false);
             blinkGroup.visible(true);
@@ -85,52 +86,52 @@ public class AvatarGridScreen extends GridScreen {
         eyeW = previewGroup.add(SettingsSlider.floatSlider(20, y, btnWidth, btnHeight, model.eyeR.ball.w, 0.25f, 4f, f -> {
             model.eyeR.ball.w(f);
             model.eyeL.ball.w(f);
-        }, f -> String.format("眼球宽度: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.eyeballwidth", NUMBER_FORMAT.format(f))));
         eyeH = previewGroup.add(SettingsSlider.floatSlider(20, y + btnHeight + 2, btnWidth, btnHeight, model.eyeR.ball.h, 0.25f, 4f, f -> {
             model.eyeR.ball.h(f);
             model.eyeL.ball.h(f);
-        }, f -> String.format("眼球高度: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.eyeballheight", NUMBER_FORMAT.format(f))));
         eyeOffsetXL = previewGroup.add(SettingsSlider.floatSlider(20 + btnWidth + 2, y, btnWidth, btnHeight, config.eyeOffsetXL, -2f, 2f, f -> {
             config.eyeOffsetXL = f;
             if (!model.active() || AutoBlink.enabled) model.eyeL.rawPos.x = f;
-        }, f -> String.format("左眼球X偏移: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.lefteyeballoffsetx", NUMBER_FORMAT.format(f))));
         eyeOffsetYL = previewGroup.add(SettingsSlider.floatSlider(20 + btnWidth + 2, y + btnHeight + 2, btnWidth, btnHeight, config.eyeOffsetYL, -2f, 2f, f -> {
             config.eyeOffsetYL = f;
             if (!model.active() || AutoBlink.enabled) model.eyeL.rawPos.y = f;
-        }, f -> String.format("左眼球Y偏移: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.lefteyeballoffsety", NUMBER_FORMAT.format(f))));
         eyeOffsetXR = previewGroup.add(SettingsSlider.floatSlider(20 + btnWidth + 2, y + (btnHeight + 2) * 2, btnWidth, btnHeight, config.eyeOffsetXR, -2f, 2f, f -> {
             config.eyeOffsetXR = f;
             if (!model.active() || AutoBlink.enabled) model.eyeR.rawPos.x = f;
-        }, f -> String.format("右眼球X偏移: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.righteyeballoffsetx", NUMBER_FORMAT.format(f))));
         eyeOffsetYR = previewGroup.add(SettingsSlider.floatSlider(20 + btnWidth + 2, y + (btnHeight + 2) * 3, btnWidth, btnHeight, config.eyeOffsetYR, -2f, 2f, f -> {
             config.eyeOffsetYR = f;
             if (!model.active() || AutoBlink.enabled) model.eyeR.rawPos.y = f;
-        }, f -> String.format("右眼球Y偏移: %.2f", f)));
+        }, f -> I18n.translate("mcft.gui.slider.righteyeballoffsety", NUMBER_FORMAT.format(f))));
         brow = null;
-        if (model.isFlat) brow = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight, model.mouth.h, -3f, 3f, f -> model.mouth.h(f), f -> String.format("眉毛高度: %.2f", f)));
-        eyeX = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight, config.eyeXMul, 0.1f, 2f, f -> config.eyeXMul = f, f -> String.format("眼球X轴移动倍率: %.2f", f)));
-        eyeY = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight, config.eyeYMul, 0.1f, 2f, f -> config.eyeYMul = f, f -> String.format("眼球Y轴移动倍率: %.2f", f)));
-        blinkGroup.add(ButtonWidget.builder(Text.of(config.autoBlink ? "关闭自动眨眼" : "开启自动眨眼"), b -> {
+        if (model.isFlat) brow = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight, model.mouth.h, -3f, 3f, f -> model.mouth.h(f), f -> I18n.translate("mcft.gui.slider.eyebrowheight", NUMBER_FORMAT.format(f))));
+        eyeX = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight, config.eyeXMul, 0.1f, 2f, f -> config.eyeXMul = f, f -> I18n.translate("mcft.gui.slider.eyeballmovemulx", NUMBER_FORMAT.format(f))));
+        eyeY = previewGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight, config.eyeYMul, 0.1f, 2f, f -> config.eyeYMul = f, f -> I18n.translate("mcft.gui.slider.eyeballmovemuly", NUMBER_FORMAT.format(f))));
+        blinkGroup.add(ButtonWidget.builder(Text.translatable(config.autoBlink ? "mcft.gui.button.autoblink.off" : "mcft.gui.button.autoblink.on"), b -> {
             config.autoBlink = !config.autoBlink;
-            b.setMessage(Text.of(config.autoBlink ? "关闭自动眨眼" : "开启自动眨眼"));
+            b.setMessage(Text.translatable(config.autoBlink ? "mcft.gui.button.autoblink.off" : "mcft.gui.button.autoblink.on"));
         }).dimensions(20, y, btnWidth, btnHeight).build());
-        blinkGroup.add(ButtonWidget.builder(Text.of(config.autoSwitchBlink ? "关闭自动切换" : "开启自动切换"), b -> {
+        blinkGroup.add(ButtonWidget.builder(Text.translatable(config.autoSwitchBlink ? "mcft.gui.button.autoswitch.off" : "mcft.gui.button.autoswitch.on"), b -> {
             config.autoSwitchBlink = !config.autoSwitchBlink;
-            b.setMessage(Text.of(config.autoSwitchBlink ? "关闭自动切换" : "开启自动切换"));
+            b.setMessage(Text.translatable(config.autoSwitchBlink ? "mcft.gui.button.autoswitch.off" : "mcft.gui.button.autoswitch.on"));
         }).dimensions(20, y + btnHeight + 2, btnWidth, btnHeight).build());
-        blinkInterval = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight, config.blinkInterval, 1f, 10f, f -> config.blinkInterval = f, f -> String.format("眨眼间隔时间: %.2fs", f)));
-        blinkIntervalFix = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight, config.blinkIntervalFix, 0f, 10f, f -> config.blinkIntervalFix = f, f -> String.format("间隔时间随机: %.2fs", f)));
-        blinkDuration = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight, config.blinkDuration, 0.01f, 0.5f, f -> config.blinkDuration = f, f -> String.format("眨眼持续时间: %.2fs", f)));
-        blinkDurationFix = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 5, btnWidth, btnHeight, config.blinkDurationFix, 0f, 0.5f, f -> config.blinkDurationFix = f, f -> String.format("持续时间随机: %.2fs", f)));
-        blinkMaxY = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 6, btnWidth, btnHeight, config.blinkMaxY, 0f, 1f, f -> config.blinkMaxY = f, f -> String.format("眼皮打开百分比: %.0f%%", f * 100)));
-        blinkGroup.add(ButtonWidget.builder(Text.of("重置"), b -> {
+        blinkInterval = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 2, btnWidth, btnHeight, config.blinkInterval, 1f, 10f, f -> config.blinkInterval = f, f -> I18n.translate("mcft.gui.slider.blinkinterval", NUMBER_FORMAT.format(f))));
+        blinkIntervalFix = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 3, btnWidth, btnHeight, config.blinkIntervalFix, 0f, 10f, f -> config.blinkIntervalFix = f, f -> I18n.translate("mcft.gui.slider.blinkintervalfix", NUMBER_FORMAT.format(f))));
+        blinkDuration = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 4, btnWidth, btnHeight, config.blinkDuration, 0.01f, 0.5f, f -> config.blinkDuration = f, f -> I18n.translate("mcft.gui.slider.blinkduration", NUMBER_FORMAT.format(f))));
+        blinkDurationFix = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 5, btnWidth, btnHeight, config.blinkDurationFix, 0f, 0.5f, f -> config.blinkDurationFix = f, f -> I18n.translate("mcft.gui.slider.blinkdurationfix", NUMBER_FORMAT.format(f))));
+        blinkMaxY = blinkGroup.add(SettingsSlider.floatSlider(20, y + (btnHeight + 2) * 6, btnWidth, btnHeight, config.blinkMaxY, 0f, 1f, f -> config.blinkMaxY = f, f -> I18n.translate("mcft.gui.slider.lidopenness", "%.0f".formatted(f * 100))));
+        blinkGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.reset"), b -> {
             blinkInterval.setValue(5f);
             blinkIntervalFix.setValue(7.5f);
             blinkDuration.setValue(0.1f);
             blinkDurationFix.setValue(0.25f);
             blinkMaxY.setValue(0.8f);
         }).dimensions(20, y + (btnHeight + 2) * 7, btnWidth, btnHeight).build());
-        blinkGroup.add(ButtonWidget.builder(Text.of("返回"), b -> {
+        blinkGroup.add(ButtonWidget.builder(Text.translatable("mcft.gui.button.back"), b -> {
             defaultGroup.visible(true);
             previewGroup.visible(true);
             blinkGroup.visible(false);
